--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,17 +12,21 @@
         tools:layout="@layout/fragment_users">
 
         <action
-            android:id="@+id/action_UsersFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_UsersFragment_to_ProfileFragment"
+            app:destination="@id/ProfileFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.randomusercybilltek.view.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/ProfileFragment"
+        android:name="com.example.randomusercybilltek.view.ProfileFragment"
+        android:label="@string/profile_fragment_label"
+        tools:layout="@layout/fragment_profile">
+
+        <!--<argument
+            android:name="UID"
+            app:argType="integer" />-->
 
         <action
-            android:id="@+id/action_SecondFragment_to_UsersFragment"
+            android:id="@+id/action_ProfileFragment_to_UsersFragment"
             app:destination="@id/UsersFragment" />
     </fragment>
 </navigation>
