--- a/app/src/main/res/layout/item_person_preview.xml
+++ b/app/src/main/res/layout/item_person_preview.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imgUser"
+                android:id="@+id/img_user"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:src="@mipmap/ic_launcher"/>
@@ -29,7 +29,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="16dp"
                 android:gravity="center_vertical"
-                android:layout_toEndOf="@+id/imgUser">
+                android:layout_toEndOf="@+id/img_user">
 
                 <TextView
                 android:id="@+id/tvFullName"
